--- a/store/blocks/header.jsonc
+++ b/store/blocks/header.jsonc
@@ -7,7 +7,8 @@
   },
   "header-layout.desktop": {
     "children": [
-      "sticky-layout#desktop"
+      "sticky-layout#desktop",
+      "category-menu"
     ]
   },
   "sticky-layout#desktop": {
@@ -16,6 +17,15 @@
     },
     "children": ["flex-layout.row#desktop"]
   },
+  "category-menu": {
+    "props": {
+      "showAllDepartments": true,
+      "showSubcategories": true,
+      "menuDisposition": "center",
+      "departments": [],
+      "sortSubcategories": "name"
+    }
+},
   "flex-layout.row#desktop": {
     "props": {
       "horizontalAlign": "center",
