--- a/manifest.json
+++ b/manifest.json
@@ -46,7 +46,8 @@
     "vtex.sticky-layout": "0.x",
     "vtex.add-to-cart-button": "0.x",
     "vtex.category-menu": "2.x",
-    "vtex.similar-products-variants": "0.x"
+    "vtex.similar-products-variants": "0.x",
+    "vtex.recommendation-shelf": "1.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
